# he-retail-analytics

./: .env.example  .gitignore  .pre-commit-config.yaml  CITATION.cff  CONTRIBUTING.md  Makefile  README.md  justfile  package.json  scaffold_gaps.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  release-drafter.yml
.github/workflows/: docs.yml  pages.yml  pr-template-guard.yml  release-drafter.yml  sbom-scan.yml  web-ci.yml
backend/: .env.example  .gitignore  Makefile  README.md  alembic.ini  justfile  pyproject.toml  pytest.ini
backend/.github/workflows/: backend-ci.yml
backend/alembic/: env.py
backend/alembic/versions/: c634fd52a8bb_initial_tables_jobrecord_joblog_artifact.py
backend/migrations/: env.py
backend/scripts/: codegen_ts_client.sh
backend/src/aggregator/: api.py  jobs_runtime.py  queue.py  rq_worker.py  tasks.py
backend/src/aggregator/routes/: jobs.py  upload.py
backend/src/infra/: db.py
backend/tests/: conftest.py
backend/tests/integration/: test_job_flow.py
backend/tests/unit/: test_api_health.py
benchmarks/: asv.conf.json  bench_ops.py
docs/: Makefile  requirements.txt
docs/diagrams/: crypto_flow.gv  system_overview.gv
docs/pages/: curated-catalog-demo.md  data-profiling.md  parameter-selection.md  reproducing-figures.md  security-dpia.md
docs/source/: appendix.md  conclusion.md  conf.py  conf_extensions_snippet.txt  datasets.md  datasets.md:Zone.Identifier  discussion.md  experiments.md  implementation.md  index.rst  methodology.md  overview.md  results.md  (+1 more)
web/: .env.local.example  .npmrc  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
(+23 files in other folders)
