[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "he-backend"
version = "0.0.1"
requires-python = ">=3.12"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "sqlmodel",
  "alembic",
  "pydantic",
  "python-multipart",
  "prometheus-client",
  "typer",
  "httpx",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "pytest-asyncio",
  "ruff",
  "mypy",
]

queue = [
  "redis>=6.4",
  "rq>=2.6"
]

docs = [
  "sphinx",
  "furo",
  "myst-parser",
  "sphinx-autodoc-typehints",
  "sphinx-copybutton",
  "sphinxcontrib.mermaid",
  "sphinx_sitemap",
  "sphinxext.opengraph",
  "sphinx_design"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
